--- a/internal/gen/_template/registry.tmpl
+++ b/internal/gen/_template/registry.tmpl
@@ -1,3 +1,5 @@
+{{- /*gotype: github.com/gotd/td/internal/gen.config*/ -}}
+
 {{ define "registry" }}
 {{ $pkg := $.Package }}
 {{ template "header" $ }}
@@ -7,11 +9,20 @@
 const Layer = {{ $.Layer }}
 {{- end }}
 
-// Types returns mapping from type ids to TL type names.
+// TypesMap returns mapping from type ids to TL type names.
 func TypesMap() map[uint32]string {
   return map[uint32]string {
 {{- range $elem := $.Registry }}
     0x{{ $elem.HexID }}: "{{ $elem.Raw }}",
+{{- end }}
+  }
+}
+
+// NamesMap returns mapping from type names to TL type ids.
+func NamesMap() map[string]uint32 {
+  return map[string]uint32 {
+{{- range $elem := $.Registry }}
+    "{{ trimSuffix (trimSuffix ($elem.Raw) ($elem.HexID)) ("#") }}": 0x{{ $elem.HexID }},
 {{- end }}
   }
 }
