--- a/internal/gen/_template/utils.tmpl
+++ b/internal/gen/_template/utils.tmpl
@@ -56,11 +56,11 @@ Get{{$.Name}}() (value {{ template "print_type" $ }}{{ if and ($.Conditional) (n
     bin.Decoder
     construct() {{ $f.Name }}
 
-    // TypeID returns MTProto type id (CRC code).
+    // TypeID returns type id in TL schema.
     // See https://core.telegram.org/mtproto/TL-tl#remarks.
     TypeID() uint32
-    // SchemaName returns MTProto type name.
-    SchemaName() string
+    // TypeName returns name of type in TL schema.
+    TypeName() string
     // String implements fmt.Stringer.
     String() string
     // Zero returns true if current object has a zero value.
