feat(gen): generate slice helper for every type

--- a/internal/gen/_template/header.tmpl
+++ b/internal/gen/_template/header.tmpl
@@ -7,6 +7,7 @@ import (
 "context"
 "errors"
 "fmt"
+"sort"
 "strings"
 
 "github.com/gotd/td/bin"
@@ -18,5 +19,6 @@ var _ = context.Background()
 var _ = fmt.Stringer(nil)
 var _ = strings.Builder{}
 var _ = errors.Is
+var _ = sort.Ints
 
 {{ end }}
