--- a/internal/gen/_template/slices.tmpl
+++ b/internal/gen/_template/slices.tmpl
@@ -1,97 +1,96 @@
 {{- /*gotype: github.com/gotd/td/internal/gen.config*/ -}}
 {{ define "slices" }}
 {{- range $f := $.Interfaces }}
-// {{ $f.Name }}Slice is adapter for slice of {{ $f.Name }}.
-type {{ $f.Name }}Slice []{{ $f.Name }}
+{{ template "interface_slice" $f }}
 
-{{- range $s := $f.Constructors }}
-{{- if hasField ($f.SharedFields.Common) ("ID") ("int") }}
-// Fill{{ $s.Name }}Map fills only {{ $s.Name }} constructors to given map.
-func (s {{ $f.Name }}Slice) Fill{{ $s.Name }}Map(to map[int]*{{ $s.Name }} ) {
-    for _, elem := range s {
-        value, ok := elem.(*{{ $s.Name }})
-        if !ok {
-            continue
-        }
-        to[value.GetID()] = value
-    }
-}
-
-// {{ $s.Name }}ToMap collects only {{ $s.Name }} constructors to map.
-func (s {{ $f.Name }}Slice) {{ $s.Name }}ToMap() map[int]*{{ $s.Name }} {
-    r := make(map[int]*{{ $s.Name }}, len(s))
-    s.Fill{{ $s.Name }}Map(r)
-    return r
-}
-{{ end }}
-
-{{- end }}
-
-{{- range $mapping := $f.Mappings }}{{- if (not $mapping.Constructor) }}
-{{- if hasField (index ($f.SharedFields) ($mapping.MapperName)) ("ID") ("int") }}
-// Fill{{ $mapping.MapperName }}Map fills only {{ $mapping.MapperName }} constructors to given map.
-func (s {{ $f.Name }}Slice) Fill{{ $mapping.MapperName }}Map(to map[int]{{ template "print_mapper_type" $mapping }}) {
-    for _, elem := range s {
-        value, ok := elem.As{{ $mapping.MapperName }}()
-        if !ok {
-            continue
-        }
-        to[value.GetID()] = value
-    }
-}
-
-// {{ $mapping.MapperName }}ToMap collects only {{ $mapping.MapperName }} constructors to map.
-func (s {{ $f.Name }}Slice) {{ $mapping.MapperName }}ToMap() map[int]{{ template "print_mapper_type" $mapping }} {
-    r := make(map[int]{{ template "print_mapper_type" $mapping }}, len(s))
-    s.Fill{{ $mapping.MapperName }}Map(r)
-    return r
-}
-{{ end }}
-
-// AppendOnly{{ $mapping.MapperName }} appends only {{ $mapping.MapperName }} constructors to
-// given slice.
-func (s {{ $f.Name }}Slice) AppendOnly{{ $mapping.MapperName }}(to []{{ template "print_mapper_type" $mapping }}) []{{ template "print_mapper_type" $mapping }} {
-    for _, elem := range s {
-        value, ok := elem.As{{ $mapping.MapperName }}()
-        if !ok {
-            continue
-        }
-        to = append(to, value)
-    }
-
-    return to
-}
-
-// As{{ $mapping.MapperName }} returns copy with only {{ $mapping.MapperName }} constructors.
-func (s {{ $f.Name }}Slice) As{{ $mapping.MapperName }}() (to []{{ template "print_mapper_type" $mapping }}) {
-    return s.AppendOnly{{ $mapping.MapperName }}(to)
-}
-
-{{- range $method := concat ("First") ("Last") }}
-// {{ $method }}As{{ $mapping.MapperName }} returns {{ lower $method }} element of slice (if exists).
-func (s {{ $f.Name }}Slice) {{ $method }}As{{ $mapping.MapperName }}() (v {{ template "print_mapper_type" $mapping }}, ok bool) {
-    value, ok := s.{{ $method }}()
-    if !ok {
-        return
-    }
-    return value.As{{ $mapping.MapperName }}()
-}
-{{- end }}
-
-{{- range $method := concat ("PopFirst") ("Pop") }}
-// {{ $method }}As{{ $mapping.MapperName }} returns element of slice (if exists).
-func (s *{{ $f.Name }}Slice) {{ $method }}As{{ $mapping.MapperName }}() (v {{ template "print_mapper_type" $mapping }}, ok bool) {
-    value, ok := s.{{ $method }}()
-    if !ok {
-        return
-    }
-    return value.As{{ $mapping.MapperName }}()
-}
-{{- end }}
+{{- range $s := $.Structs }}{{- if generateSliceHelper ($s) -}}
+{{ template "struct_slice" $s }}
 {{- end }}{{- end }}
 
+{{ end }}
+{{ end }}
+
+{{ define "slice_sort_by" }}{{ $args := . -}}
+{{ $f := index ($args) (0) -}}
+{{ $field := index ($args) (1) -}}
+// SortBy{{ $field.Name }} sorts slice of {{ $f.Name }} by {{ $field.Name }}.
+func (s {{ template "slice_name" $f }}) SortBy{{ $field.Name }}() {{ template "slice_name" $f }} {
+    return s.Sort(func(a, b {{ $f.Name }}) bool {
+        return a.Get{{ $field.Name }}() < b.Get{{ $field.Name }}()
+    })
+}
+
+// SortStableBy{{ $field.Name }} sorts slice of {{ $f.Name }} by {{ $field.Name }}.
+func (s {{ template "slice_name" $f }}) SortStableBy{{ $field.Name }}() {{ template "slice_name" $f }} {
+    return s.SortStable(func(a, b {{ $f.Name }}) bool {
+        return a.Get{{ $field.Name }}() < b.Get{{ $field.Name }}()
+    })
+}
+{{ end }}
+
+{{ define "slice_collect_to_map" }}{{ $args := . -}}
+{{ $f := index ($args) (0) -}}
+{{ $field := index ($args) (1) -}}
+{{ $name := index ($args) (2) -}}
+// Fill{{ $name }}Map fills only {{ $name }} constructors to given map.
+func (s {{ template "slice_name" $f }}) Fill{{ $name }}{{ template "map_collector_name" $field }}Map(to map[{{ $field.Type }}]*{{ $name }} ) {
+    for _, elem := range s {
+        value, ok := elem.(*{{ $name }})
+        if !ok {
+            continue
+        }
+        to[value.Get{{ $field.Name }}()] = value
+    }
+}
+
+// {{ $name }}ToMap collects only {{ $name }} constructors to map.
+func (s {{ template "slice_name" $f }}) {{ $name }}To{{ template "map_collector_name" $field }}Map() map[{{ $field.Type }}]*{{ $name }} {
+    r := make(map[{{ $field.Type }}]*{{ $name }}, len(s))
+    s.Fill{{ $name }}Map(r)
+    return r
+}
+{{ end }}
+
+{{ define "slice_name" }}{{ $.Name }}Array{{ end }}
+{{ define "slice_field_name" }}{{ $.Type }}Array{{ end }}
+{{ define "slice_result_name" }}{{ if $.Interface }}{{ $.ResultFunc }}Array{{ else }}[]{{ $.ResultFunc }}{{ end }}{{ end }}
+
+{{ define "slice" }}{{ $f := . }}
+// {{ template "slice_name" $f }} is adapter for slice of {{ $f.Name }}.
+type {{ template "slice_name" $f }} []{{ $f.Name }}
+
+// Sort sorts slice of {{ $f.Name }}.
+func (s {{ template "slice_name" $f }}) Sort(less func(a, b {{ $f.Name }}) bool) {{ template "slice_name" $f }} {
+    sort.Slice(s, func(i, j int) bool {
+        return less(s[i], s[j])
+    })
+    return s
+}
+
+// SortStable sorts slice of {{ $f.Name }}.
+func (s {{ template "slice_name" $f }}) SortStable(less func(a, b {{ $f.Name }}) bool) {{ template "slice_name" $f }} {
+    sort.SliceStable(s, func(i, j int) bool {
+        return less(s[i], s[j])
+    })
+    return s
+}
+
+// Retain filters in-place slice of {{ $f.Name }}.
+func (s {{ template "slice_name" $f }}) Retain(keep func(x {{ $f.Name }}) bool) {{ template "slice_name" $f }} {
+    n := 0
+    for _, x := range s {
+        if keep(x) {
+            s[n] = x
+            n++
+        }
+    }
+    s = s[:n]
+
+    return s
+}
+
 // First returns first element of slice (if exists).
-func (s {{ $f.Name }}Slice) First() (v {{ $f.Name }}, ok bool) {
+func (s {{ template "slice_name" $f }}) First() (v {{ $f.Name }}, ok bool) {
     if len(s) < 1 {
         return
     }
@@ -99,7 +98,7 @@ func (s {{ $f.Name }}Slice) First() (v {{ $f.Name }}, ok bool) {
 }
 
 // Last returns last element of slice (if exists).
-func (s {{ $f.Name }}Slice) Last() (v {{ $f.Name }}, ok bool) {
+func (s {{ template "slice_name" $f }}) Last() (v {{ $f.Name }}, ok bool) {
     if len(s) < 1 {
         return
     }
@@ -108,7 +107,7 @@ func (s {{ $f.Name }}Slice) Last() (v {{ $f.Name }}, ok bool) {
 
 
 // PopFirst returns first element of slice (if exists) and deletes it.
-func (s *{{ $f.Name }}Slice) PopFirst() (v {{ $f.Name }}, ok bool) {
+func (s *{{ template "slice_name" $f }}) PopFirst() (v {{ $f.Name }}, ok bool) {
     if s == nil || len(*s) < 1 {
         return
     }
@@ -118,7 +117,8 @@ func (s *{{ $f.Name }}Slice) PopFirst() (v {{ $f.Name }}, ok bool) {
 
     // Delete by index from SliceTricks.
     copy(a[0:], a[1:])
-    a[len(a)-1] = nil
+    var zero {{ $f.Name }}
+    a[len(a)-1] = zero
     a = a[:len(a)-1]
     *s = a
 
@@ -126,7 +126,7 @@ func (s *{{ $f.Name }}Slice) PopFirst() (v {{ $f.Name }}, ok bool) {
 }
 
 // Pop returns last element of slice (if exists) and deletes it.
-func (s *{{ $f.Name }}Slice) Pop() (v {{ $f.Name }}, ok bool) {
+func (s *{{ template "slice_name" $f }}) Pop() (v {{ $f.Name }}, ok bool) {
     if s == nil || len(*s) < 1 {
         return
     }
@@ -138,7 +138,4 @@ func (s *{{ $f.Name }}Slice) Pop() (v {{ $f.Name }}, ok bool) {
 
     return v, true
 }
-
-{{- end }}
-
 {{ end }}
