--- a/internal/gen/_template/header.tmpl
+++ b/internal/gen/_template/header.tmpl
@@ -11,6 +11,7 @@ import (
 "strings"
 
 "github.com/gotd/td/bin"
+"github.com/gotd/td/tdp"
 )
 
 // No-op definition for keeping imports.
@@ -20,5 +21,6 @@ var _ = fmt.Stringer(nil)
 var _ = strings.Builder{}
 var _ = errors.Is
 var _ = sort.Ints
+var _ = tdp.Format
 
 {{ end }}
