--- a/internal/gen/_template/main.tmpl
+++ b/internal/gen/_template/main.tmpl
@@ -40,13 +40,37 @@ const {{ $s.Name }}TypeID = {{ if not $s.Vector }}0x{{ $s.HexID }}{{- else -}}bi
 // TypeID returns type id in TL schema.
 //
 // See https://core.telegram.org/mtproto/TL-tl#remarks.
-func ({{ $s.Receiver }} *{{ $s.Name }}) TypeID() uint32 {
+func (*{{ $s.Name }}) TypeID() uint32 {
     return {{ $s.Name }}TypeID
 }
 
 // TypeName returns name of type in TL schema.
-func ({{ $s.Receiver }} *{{ $s.Name }}) TypeName() string {
+func (*{{ $s.Name }}) TypeName() string {
     return "{{ $s.RawName }}"
+}
+
+// TypeInfo returns info about TL type.
+func ({{ $s.Receiver }} *{{ $s.Name }}) TypeInfo() tdp.Type {
+    typ := tdp.Type{
+        Name: "{{ $s.RawName }}",
+        ID:   {{ $s.Name }}TypeID,
+    }
+    if {{ $s.Receiver }} == nil {
+        typ.Null = true
+        return typ
+    }
+    typ.Fields = []tdp.Field{
+{{- range $f := $s.Fields }}
+        {
+            Name: "{{ $f.Name }}",
+            SchemaName: "{{ $f.RawName }}",
+        {{- if $f.Conditional }}
+            Null: !{{ $s.Receiver }}.{{ $f.ConditionalField }}.Has({{ $f.ConditionalIndex }}),
+        {{- end }}
+        },
+{{- end }}
+    }
+    return typ
 }
 
 // Encode implements bin.Encoder.
