feat(gen,tdp): skip flags field
Don't pretty-print flags field.

--- a/internal/gen/_template/main.tmpl
+++ b/internal/gen/_template/main.tmpl
@@ -61,6 +61,7 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) TypeInfo() tdp.Type {
     }
     typ.Fields = []tdp.Field{
 {{- range $f := $s.Fields }}
+{{- if ne ($f.Type) ("bin.Fields") }}
         {
             Name: "{{ $f.Name }}",
             SchemaName: "{{ $f.RawName }}",
@@ -68,6 +69,7 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) TypeInfo() tdp.Type {
             Null: !{{ $s.Receiver }}.{{ $f.ConditionalField }}.Has({{ $f.ConditionalIndex }}),
         {{- end }}
         },
+{{- end }}
 {{- end }}
     }
     return typ
