--- a/internal/gen/_template/errors.tmpl
+++ b/internal/gen/_template/errors.tmpl
@@ -4,13 +4,6 @@
 {{ $pkg := $.Package }}
 {{ template "header" $ }}
 
-// ErrorType wraps error type string as Go error.
-type ErrorType string
-
-func (err ErrorType) Error() string {
-  return string(err)
-}
-
 {{- range $s := $.Errors }}
 
 // Err{{ $s.Name }} is error type for "{{ $s.Type }}".
@@ -18,7 +11,7 @@ const Err{{ $s.Name }} = "{{ $s.Type }}"
 
 // Is{{ $s.Name }} reports whether err is {{ $s.Type }}.
 func Is{{ $s.Name }}(err error) bool {
-  return errors.Is(err, ErrorType(Err{{ $s.Name }}))
+  return tgerr.Is(err, Err{{ $s.Name }})
 }
 {{ end }}
 
