fix(gen): return err in dispatch

--- a/internal/gen/_template/handlers.tmpl
+++ b/internal/gen/_template/handlers.tmpl
@@ -55,7 +55,7 @@ func (u UpdateDispatcher) Handle(ctx context.Context, updates *Updates) error {
         e.lazyInitFromUpdates(updates)
         multierr.AppendInto(&err, u.dispatch(ctx, e, update))
 	}
-	return nil
+	return err
 }
 
 // HandleShort implements UpdateDispatcher.
