--- a/internal/gen/_template/main.tmpl
+++ b/internal/gen/_template/main.tmpl
@@ -337,25 +337,7 @@ _ {{ $s.Interface }} = &{{ $s.Name }}{}
 )
 
 {{- if $s.Method }}
-// {{ $s.Method }} invokes method {{ $s.RawType }} returning error if any.
-{{- if $s.Docs }}
-{{- range $d := $s.Docs }}
-// {{ trim $d }}
-{{- end }}
-{{- end }}
-{{- if $s.Links }}
-    {{- template "print_links" $s.Links }}
-{{- end }}
-{{- if $s.Errors }}
-    {{- template "print_errors" $s.Errors }}
-{{- end }}
-{{- if $s.URL }}
-//
-// See {{ $s.URL }} for reference.
-{{- end }}
-{{- if $s.BotCanUse }}
-// Can be used by bots.
-{{- end }}
+{{- template "method_description" $s }}
 {{- if $s.Result }}
 {{- if $s.ResultSingular }}
 func (c *Client) {{ $s.Method }}({{ template "request_params" $s }}) ({{ if not $s.ResultVector }}*{{ $s.Result }}{{ else }}{{ template "slice_result_name" $s }}{{ end }}, error) {
